Fixed vertical allignment issue

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 	</head>
 
 <body>
-	<div id="mainFrame">
-		<div id="countdowntimer"><span id="timer"></span></div>
-		<p><button id="pauseButton">Pause</button></p>
-		<p><input type="text" id="timestring" name="timestring" autofocus></p>
-	</div>
+    <div class="container">
+        <div class="mainFrame">
+            <div class="countdowntimer"><span id="timer"></span></div>
+            <p><button id="pauseButton">Pause</button></p>
+            <p><input type="text" id="timestring" name="timestring" autofocus></p>
+        </div>
+    </div>
 </body>
 </html>
